// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages reuseOperatorGroup should render coorectly when one operator group is specified 1`] = `
<TwoThirdsLayout
  description="Select Operator Group page of the Create Fares Data Service"
  errors={Array []}
  title="Select Operator Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/reuseOperatorGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="reuse-operator-group-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="reuse-operator-group-page-heading"
          >
            Select an operator group
          </h1>
        </legend>
        <div
          className="govuk-warning-text"
        >
          <span
            aria-hidden="true"
            className="govuk-warning-text__icon govuk-!-margin-top-1"
          >
            !
          </span>
          <strong
            className="govuk-warning-text__text"
          >
            <span
              className="govuk-warning-text__assistive"
            >
              Warning
            </span>
            You can create new operator group in your
             
            <a
              className="govuk-link"
              href="/viewOperatorGroups"
            >
              operator settings.
            </a>
             
            <br />
            Don't worry you can navigate back to this page when you are finished.
          </strong>
        </div>
      </fieldset>
      <div
        className="card-row"
        id="individual-passengers"
      >
        <OperatorGroupCard
          defaultChecked={false}
          index={0}
          key="1"
          operatorGroup={
            Object {
              "id": 1,
              "name": "Regular Child",
              "operators": Array [
                Object {
                  "name": "First operator",
                  "nocCode": "FOP",
                },
              ],
            }
          }
        />
      </div>
    </div>
    <input
      className="govuk-button govuk-!-margin-right-2"
      id="continue-button"
      type="submit"
      value="Continue"
    />
    <a
      className="govuk-button govuk-button--secondary"
      href="/viewOperatorGroups"
    >
      Create new
    </a>
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages reuseOperatorGroup should render correctly 1`] = `
<TwoThirdsLayout
  description="Select Operator Group page of the Create Fares Data Service"
  errors={Array []}
  title="Select Operator Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/reuseOperatorGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="reuse-operator-group-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="reuse-operator-group-page-heading"
          >
            Select an operator group
          </h1>
        </legend>
        <div
          className="govuk-warning-text"
        >
          <span
            aria-hidden="true"
            className="govuk-warning-text__icon govuk-!-margin-top-1"
          >
            !
          </span>
          <strong
            className="govuk-warning-text__text"
          >
            <span
              className="govuk-warning-text__assistive"
            >
              Warning
            </span>
            You can create new operator group in your
             
            <a
              className="govuk-link"
              href="/viewOperatorGroups"
            >
              operator settings.
            </a>
             
            <br />
            Don't worry you can navigate back to this page when you are finished.
          </strong>
        </div>
      </fieldset>
      <span
        className="govuk-body"
      >
        <i>
          You currently have no operator group
        </i>
      </span>
    </div>
    <a
      className="govuk-button govuk-button--secondary"
      href="/viewOperatorGroups"
    >
      Create new
    </a>
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages reuseOperatorGroup should render errors when user does not select a radio button 1`] = `
<TwoThirdsLayout
  description="Select Operator Group page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose an operator group from the options below",
        "id": "operatorGroup-0",
      },
    ]
  }
  title="Select Operator Group - Create Fares Data Service"
>
  <CsrfForm
    action="/api/reuseOperatorGroup"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose an operator group from the options below",
            "id": "operatorGroup-0",
          },
        ]
      }
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="reuse-operator-group-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="reuse-operator-group-page-heading"
          >
            Select an operator group
          </h1>
        </legend>
        <div
          className="govuk-warning-text"
        >
          <span
            aria-hidden="true"
            className="govuk-warning-text__icon govuk-!-margin-top-1"
          >
            !
          </span>
          <strong
            className="govuk-warning-text__text"
          >
            <span
              className="govuk-warning-text__assistive"
            >
              Warning
            </span>
            You can create new operator group in your
             
            <a
              className="govuk-link"
              href="/viewOperatorGroups"
            >
              operator settings.
            </a>
             
            <br />
            Don't worry you can navigate back to this page when you are finished.
          </strong>
        </div>
      </fieldset>
      <div
        className="card-row"
        id="individual-passengers"
      >
        <OperatorGroupCard
          defaultChecked={false}
          index={0}
          key="1"
          operatorGroup={
            Object {
              "id": 1,
              "name": "Regular Child",
              "operators": Array [
                Object {
                  "name": "First operator",
                  "nocCode": "FOP",
                },
              ],
            }
          }
        />
      </div>
    </div>
    <input
      className="govuk-button govuk-!-margin-right-2"
      id="continue-button"
      type="submit"
      value="Continue"
    />
    <a
      className="govuk-button govuk-button--secondary"
      href="/viewOperatorGroups"
    >
      Create new
    </a>
  </CsrfForm>
</TwoThirdsLayout>
`;
